--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -12,3 +12,6 @@ se till att x-texten inte är för lång.
 se till att den inte är för hög.
 -"- y-texten
 
+
+I create_graph:
+Se till att antalet siffror på axlarna kan varieras.
