Håller på och betar av...
Rev: server/modules/graphics/business_graphics/TODO:1.6

--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -1,7 +1,7 @@
 Fixa följande kollar i init:
-om labels saknas: sätt labelsize till 0
+?om labels saknas: sätt labelsize till 0
 
-get_font ska implementeras rätt. Se till att inga scale finns!
+%get_font ska implementeras rätt. Se till att inga scale finns!
 
 Övriga kollar:
 Graph:
