--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -22,3 +22,5 @@ Se till att antalet siffror på axlarna kan varieras.
 Default-färger för bars och graph
 
 Översätt till engelska
+
+Fixa så att bilderna inte behöver vara lika stora som graphen
