*** empty log message ***
Rev: server/modules/graphics/business_graphics/TODO:1.9
Rev: server/modules/graphics/business_graphics/create_bars.pike:1.16

--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -24,3 +24,7 @@ Default-färger för bars och graph
 Översätt till engelska
 
 Fixa så att bilderna inte behöver vara lika stora som graphen
+
+Kolla storlekar i pie-charts
+
+%Svartvitt!
