--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changes since Roxen Challenger 1.2 alpha 13
 -----------------------------------------------
 
+o Added a configurable "default content type" to the Content type
+  module. Now it's easy to use text/plain instead of the default
+  application/octet-stream for all unknown files.
+
 o Crypto and SSL3 modules removed from the distribution due to legal reasons.
 
 o Location-modules now have a secondary sorting-order (longest path first),
