--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -30,3 +30,10 @@ Se till att antalet siffror på axlarna kan varieras.
 %Svartvitt!
 
 Skapa type=table
+
+Snyggt! Går det att lägga in mer spacing mellan siffrorna och y-axeln,
+och mellan teckenförklaringen och bildens ytterkant? Pilen i
+stapeldiagrammen verkar ha halkat ner lite jmf grafdiagrammen.
+Annars är det supernice! :)
+
+Fixa tårtbitar i stapeln på pajerna
