--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -32,8 +32,9 @@ Se till att antalet siffror på axlarna kan varieras.
 Skapa type=table
 
 Snyggt! Går det att lägga in mer spacing mellan siffrorna och y-axeln,
-och mellan teckenförklaringen och bildens ytterkant? Pilen i
-stapeldiagrammen verkar ha halkat ner lite jmf grafdiagrammen.
-Annars är det supernice! :)
+och mellan teckenförklaringen och bildens ytterkant? 
+
+%Pilen i
+%stapeldiagrammen verkar ha halkat ner lite jmf grafdiagrammen.
 
 Fixa tårtbitar i stapeln på pajerna
