*** empty log message ***
Rev: server/modules/graphics/business_graphics/TODO:1.14

--- a/server/modules/graphics/business_graphics/TODO
+++ b/server/modules/graphics/business_graphics/TODO
@@ -34,7 +34,10 @@ Skapa type=table
 Snyggt! Går det att lägga in mer spacing mellan siffrorna och y-axeln,
 och mellan teckenförklaringen och bildens ytterkant? 
 
+Ram runt graphen
+
 %Pilen i
 %stapeldiagrammen verkar ha halkat ner lite jmf grafdiagrammen.
 
 Fixa tårtbitar i stapeln på pajerna
+Fixa rätt skuggning
