--- a/CHANGES
+++ b/CHANGES
@@ -24,6 +24,8 @@ o Changed the default mode of the ftp-protocol module to ASCII.
 Changes since Roxen Challenger 1.2 alpha 13
 -----------------------------------------------
 
+o Problems distributing crypto-code outside Sweden.
+
 o New status action: Extended process status for Linux. It uses pstree
   and the /proc/ file system. A bonus is that it can be used as a
   general process tree browser!
@@ -31,8 +33,6 @@ o New status action: Extended process status for Linux. It uses pstree
 o Added a configurable "default content type" to the Content type
   module. Now it's easy to use text/plain instead of the default
   application/octet-stream for all unknown files.
-
-o Crypto and SSL3 modules removed from the distribution due to legal reasons.
 
 o Location-modules now have a secondary sorting-order (longest path first),
   which removes some cases where priorities were needed before.
