--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Changes since Roxen Challenger 1.2 alpha 15
+-----------------------------------------------
+
+o FTP data connections are now opened on the same IP as the command
+  connection is on. This ought to make firewalls happier.
+
+o Fixed an old bug in protocols/ssl3.pike. It should no longer generate
+  an internal error when accessing a config-interface with ssl3 using http.
+
+
 Changes since Roxen Challenger 1.2 alpha 14
 -----------------------------------------------
 
