--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,23 @@ o The folder list module now works on pages with query variables
   (foo.html?bar=baz&gaz=zonk). The non-fl related variables will be
   kept when unfolding / folding.
 
+o roxen_perror() now reports time syncronously.
+
+o open() of non-existant files speeded up.
+
+o install.pike now checks for existance of protocols/ssl3.pike.
+
+o Fixed obscure bug in roxen_master.pike.
+
+o Applied Henrik P Johnson <hpj@globecom.net>'s fixes to
+  modules/filesystems/secure_fs.pike
+
+o Added option to let query to be RXML-parsed in modules/tags/sqltag.pike.
+
+o Parsing of the PEM file-format moved from protocols/ssl3.pike to a new
+  Pike-module: SSL.pem.
+
+
 Changes since Roxen Challenger 1.2 alpha 14
 -----------------------------------------------
 
