<list-tags> and updated tag docs.
Rev: CHANGES:1.103

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+o Several tags have updated documentation (using the "help" option).
+
+o New tag, <list-tags>.
+
 Changes since Roxen Challenger 1.2 beta 1
 -----------------------------------------------
 
