--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+Changes since Roxen Challenger 1.2.26 Yellow
+-----------------------------------------------
+
+o Bug in protocols/http.pike fixed. If a connection was made, but no
+  data was sent, the connection wouldn't timeout.
+
+
 Changes since Roxen Challenger 1.2.25 Yellow
 -----------------------------------------------
 
