--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@ o SSL3 has been updated to not be vulnerable to the Bleichenbacher
 
 o Applied ftpgateway patch by Wilhelm Koehler <wk@cs.tu-berlin.de>.
 
+o Improved support for ncFTP in ftp2.pike.
+
 o Added check for libm, since Raphsosy doesn't have libm.
 
 o Added kluge to support clients based on SSLeay 0.9.
